1/24/2026
	I had other things to do than this too, but oh well. Implemented partition lines, which use some criterion to partition a line into segments (e.g. regions like in equal sum lines, runs of constant parity, or ascending/descending digits), and evaluates the set of segments, e.g. all the same/different, one is greater than some value, etc. There are sum and count versions for evaluation. Test cases added.

1/23/2026
	Well, this was probably a dumb idea. Plan was to implement test harness for multi-sudoku, so I can test the sohei and samurai functions. Ended up revamping the entire solution printing code. To be fair, it desperately needed it, since that was pretty OG, but not what I was planning for today.
	And then, I just refactored all of multi-sudoku. I really had other things to do today. But there's some Samurai test cases now, and the code is a lot more modular and effective. And the documentation is actually accurate.

1/20/2026 bis
	Combed through code to replace instances of manual property initialization with the appropriate initialization methods from utilities.
	Added support for stratified cages (parity, entropy, modular), and oil and water cages. Added test case.
	Implement support for Sohei sudoku (Gattai-4).

1/20/2026
	Expanded support for TopDown conditions to LeftRight, and Global. Added test case.

1/18/2026 bis
	Abstracted modelling Kropki relationships so that it is between two variables, not necessarily two adjacent cell values.
	Implemented support for Kroopki dots, and included test case.
	Did a TopDownCondition global constraint, which allows the user to model "top heavy" type constraints, where two vertically adjacent cells that meet one condition must meet a second. Implemented test case.
	Added 'Difference' selection criterion for hanging sums.

1/18/2026
	Moved some helper functions out of __init__ that really belonged in utilities. Look at me cleaning stuff up.