@@ -1,3 +1,6 @@
+1/24/2026 bis
+	Added support for cross-grid multi sudoku line constraints.
+
 1/24/2026
 	I had other things to do than this too, but oh well. Implemented partition lines, which use some criterion to partition a line into segments (e.g. regions like in equal sum lines, runs of constant parity, or ascending/descending digits), and evaluates the set of segments, e.g. all the same/different, one is greater than some value, etc. There are sum and count versions for evaluation. Test cases added.
 
